HeCMP/across_all_frequencies/BIPS2W/time_details_4C_28
Traceback (most recent call last):
  File "app_main.py", line 75, in run_toplevel
  File "hecmp_search_all_freq.py", line 368
    elif (len(allowed_proc_configs) = 0):
                                   ^
SyntaxError: invalid syntax

real	0m0.098s
user	0m0.043s
sys	0m0.009s
